fix broken styles

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ header {
 }
 main section {
     display: grid;
-    grid-template-columns: 3fr 2fr;
+    /* grid-template-columns: 3fr 2fr; */
     gap: 2rem;
     border-radius: 3px;
     padding: 1em;
